2003-08-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Options.pm: New file.
	* lib/Automake/Makefile.am (dist_perllib_DATA): Add Options.pm.
	* automake.in (FOREIGN, GNU, GNITS, $default_strictness)
	($default_strictness_name, $strictness, $strictness_name)
	(%options, %global_options, process_option_list)
	(set_strictness): Remove, now in Options.pm.
	(initialize_per_input): Call Automake::Options::reset.
	(handle_options, get_object_extension, get_object_extension)
	(handle_languages, handle_single_transform_list, handle_compile)
	(handle_texinfo_helper, handle_man_pages, handle_dist)
	(handle_configure, do_check_merge_target)
	(handle_factored_dependencies, handle_tests)
	(handle_minor_options, scan_autoconf_traces, check_cygnus)
	(lang_sub_obj, lang_c_rewrite, lang_c_finish, rule_define)
	(make_paragraphs, am_install_var, parse_arguments): Adjust
	to set and read options via the new interface.

2003-08-07  Raja R Harinath  <harinath@acm.org>

	* Makefile.am (maintainer-check): Update perllibdir.
	* lib/Automake/Makefile.am (Config.pm): Depend on Makefile too.
	(EXTRA_DIST): Add Config.in.
	* Makefile.in, lib/Automake/Makefile.in: Regenerate.
	* tests/defs.in (AUTOMAKE, ACLOCAL): Use absolute paths in
	$perllibdir.

2003-08-06  Raja R Harinath  <harinath@acm.org>

	* configure.in (AUTOMAKE, ACLOCAL): Search the 'lib' directory
	from the builddir too, to pick up Automake::Config.
	* tests/defs.in (AUTOMAKE, ACLOCAL): Likewise.
	* configure: Regenerate.
	* automake.in (BEGIN): Handle multiple directories in $perllibdir.
	* aclocal.in (BEGIN): Likewise.

2003-08-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/ltcond.test: Thinko.

2003-08-06  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Config.in: New file.
	* lib/Automake/Makefile.am (nodist_perllib_DATA, do_subst,
	CLEANFILES): New variables.
	(Config.pm): New rule.
	* Makefile.am (maintainer-check): Adjust expected differences
	between automake.in and automake.