@@ -5616,7 +5616,7 @@ sub rule_define ($$$$$)
 
   # Check ambiguous conditional definitions.
   my ($message, $ambig_cond) =
-    condition_ambiguous_p ($target, $cond, target_conditions ($target));
+    target_conditions ($target)->ambiguous_p ($target, $cond);
   if ($message)			# We have an ambiguty.
     {
       if ($owner == TARGET_USER)
