@@ -1,5 +1,10 @@
 2003-08-07  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* lib/Automake/Variable.pm (condition_ambiguous_p): Move ...
+	* lib/Automake/DisjConditions.pm (ambiguous_p): ... here.
+	* automake.in (rule_define): Adjust usage.
+	* lib/Automake/Variable.pm (_check_ambiguous_condition): Likewise.
+
 	* lib/Automake/Options.pm: New file.
 	* lib/Automake/Makefile.am (dist_perllib_DATA): Add Options.pm.
 	* automake.in (FOREIGN, GNU, GNITS, $default_strictness)
